# private-tours-website

./: Dockerfile  api.md  compose.yaml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.mjs  user_stories.md
api/: .gitignore  Cargo.toml  Dockerfile  compose.yaml
api/src/: main.rs  migrations.sql
api/src/application/: bookings_service.rs  mod.rs  review_service.rs  timeslots_service.rs  tour_service.rs
api/src/domain/: booking.rs  error.rs  mod.rs  review.rs  timeslot.rs  tour.rs
api/src/domain/traits/: ibooking_repo.rs  ireviews_repo.rs  itimeslot_repo.rs  itours_repo.rs  mod.rs
api/src/infrastructure/: bookings_repo.rs  email_sender.rs  mod.rs  reviews_repo.rs  time_slots_repo.rs  tours_repo.rs
api/src/migrations/: 20230101000000_initial_schema.sql  migrations.sql
api/src/models/: booking.rs  guide.rs  mod.rs  service_error.rs  tour.rs
api/src/presentation/: booking_controller.rs  dto.rs  mod.rs  review_controller.rs  timeslot_controller.rs  tours_controller.rs
api/src/providers/: bookings.rs
api/src/repositories/: bookings_repo.rs  mod.rs
api/src/routes/: get_guide_info.rs  mod.rs
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
app/admin/: page.tsx
app/booking/[id]/: page.tsx
app/elements/: Booking.tsx  BookingDialog.tsx  Calen.tsx  CookieAccept.tsx  DescriptionDialog.tsx  Faq.tsx  Footer.tsx  NavigationBar.tsx  PhotoSection.tsx  ReviewCard.tsx  Reviews.tsx  Skills.tsx  Test.tsx  TourCard.tsx  Tours.tsx
app/privacy/: page.tsx
components/ui/: calendar.tsx
lib/: routes.ts
nginx/: nignx.conf
