[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }