[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version="4.10.2", features=["rustls-0_23"]}
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.12"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
actix-cors ="0.7.1"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
lettre = { version = "0.11.15", features= ["tokio1", "tokio1-native-tls"] }
anyhow = "1.0.81"